--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,20 +10,12 @@
       content="Guess which LoL/ARAM team will win based on draft "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta property="og:title" content="ARAM Guess - Predict ARAM Game Outcomes!" />
+    <meta property="og:description" content="Make your best guess on ARAM matches based on drafts only." />
+    <meta property="og:image" content="https://i.imgur.com/U1ZkyMe.png" />
+    <meta property="og:url" content="https://aramguess.com" />
+    <meta property="og:type" content="website" />
     <title>Aram Guess</title>
   </head>
   <body>
