replace react property with aramguess

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Aram Guess - Guess which LoL/ARAM team will win based on draft"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/lolicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="og:title" content="ARAM Guess - Predict ARAM Game Outcomes!" />
     <meta property="og:description" content="Make your best guess on ARAM matches based on drafts only." />
