polish frontend with better wording

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Aram Guess - Guess which LoL/ARAM team will win based on draft"
+      content="Aram Guess — Predict ARAM match outcomes based on drafts, runes, and spells. Challenge yourself with real LoL ARAM games!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/lolicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
