add ranked game mode

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,16 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Aram Guess — Predict ARAM match outcomes based on drafts, runes, and spells. Challenge yourself with real LoL ARAM games!"
+      content="LeagueGuessr — Predict League of Legends match outcomes based on drafts, runes, and spells!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/lolicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta property="og:title" content="ARAM Guess - Predict ARAM Game Outcomes!" />
-    <meta property="og:description" content="Make your best guess on ARAM matches based on drafts only." />
+    <meta property="og:title" content="LeagueGuessr - Predict League of Legends Game Outcomes!" />
+    <meta property="og:description" content="Make your best guess on League of Legends matches based on drafts only." />
     <meta property="og:image" content="https://i.imgur.com/U1ZkyMe.png" />
     <meta property="og:url" content="https://aramguess.com" />
     <meta property="og:type" content="website" />
-    <title>Aram Guess</title>
+    <title>LeagueGuessr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
